2007-03-26  Jost Boekemeier  <jostb@intern>

	* server/php/java/servlet/PhpJavaServlet.java
	(handleSocketConnection): Explicitly close down the output stream
	before waiting for the remote context. Otherwise the Sun Java
	System AS 9 delays the response and a remote script hangs for
	30 seconds in waitForContext() until the servlet terminates.

	* /server/php/java/bridge/http/ContextFactory.java
	(recycle): notify a servlet waiting in waitForContext() that the
	script terminated.
	(init): New method.
	(get): initialize, if necessary.
		
	* server/META-INF/java/Protocol.inc
	(close): check null
	(java_PipeChannel): Set the umask so that files created by apache
	can be accessed by the J2EE back end.
	
	* VERSION, php-java-bridge.spec: Version 4.0.6 released.
	
2007-03-25  Jost Boekemeier  <jostb@intern>

	* server/META-INF/java/Protocol.inc
	(getOverrideHosts): Allow X_JAVABRIDGE_OVERRIDE_HOSTS_REDIRECT w/o
	X_JAVABRIDGE_OVERRIDE_HOSTS.

	* server/php/java/servlet/PhpJavaServlet.java 
	(waitForContext): Wait. But no longer than 30 seconds.

	* server/php/java/servlet/RemoteServletContextFactory.java
	(createContext): Allow access to ServletRequest, Servlet and
	ServletContext, but not ServletResponse. If a ServletResponse
	instance is needed, fake one.

	* VERSION, php-java-bridge.spec: Version 4.0.5 released.

	
2007-03-24  Jost Boekemeier  <jostb@intern>

	* server/META-INF/java/Protocol.inc
	(close,open): Re-open a closed connection.

	* server/META-INF/java/JavaProxy.inc
	(java_closure_array): Correct test.

	* server/extract.sed: New file
	
	* server/Makefile.am: Refactored: use extract cmd file

	* server/META-INF/java/Options.inc
	(JAVA_PIPE_DIR): New option

	* server/php/java/bridge/JavaBridge.java
	(initLog): Log thread pool size.
	(weight): null arguments do not contribute anything

	* server/php/java/script/PhpScriptContext.java
	(setContinuation, call): Ignore further calls so that the default